--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@ layout: default
 <div id="start-header">
     <div class="container">
         <div id="start-into">
+            <h1> HOCHSCHULGRUPPEN FREIBURG</h1>
             <img src="assets/images/college-students.png" width="100%" />
     </div>
 </div>
@@ -14,7 +15,9 @@ layout: default
 <div class="container" id="about">
     <div class="row">
         <div class="col-md-6">
-            <h2>Was ist das Four Hour Venture?</h2>
+            <h3>Ein Studium in Freiburg bietet viel mehr Möglichkeiten als nur einen akademischen Abschluss. Eine Vielzahl an studentischen Organisationen und Hochschulgruppen lädt zum Engagement und aktiven Gestalten des Universitätsleben ein.
+</br>
+Willst auch du aktiv werden und dich engagieren, aber weißt nicht genau, wo? Dann schau dir die folgende Liste an, motivierte Mitstreiter*innen werden überall gesucht!</h3>
             <p>
                 Das Four Hour Venture ist ein kostenloses Event,
                 um internet- oder informationsbasierte Geschäftsmodelle schnell zu ausprobieren
@@ -68,7 +71,9 @@ layout: default
 
 <!-- Schedule -->
 <div class="container" id="schedule">
-    <h2 class="text-center">Ablauf des Four Hour Venture</h2>
+    <h3 class="text-center">Ein Studium in Freiburg bietet viel mehr Möglichkeiten als nur einen akademischen Abschluss. Eine Vielzahl an studentischen Organisationen und Hochschulgruppen lädt zum Engagement und aktiven Gestalten des Universitätsleben ein.
+</br>
+Willst auch du aktiv werden und dich engagieren, aber weißt nicht genau, wo? Dann schau dir die folgende Liste an, motivierte Mitstreiter*innen werden überall gesucht!</h3>
 
     <div class="row">
         <div class="col-sm-12 col-md-4">
@@ -252,24 +257,187 @@ layout: default
     <h2>Frequently asked questions</h2>
 
     <div class="row">
+
         <div class="col-md-3">
-            <img src="{{site.baseurl}}/assets/images/Logo official.png" width="100%" alt="Ostfalia Hochschule" />
+          <a href="https://boersenverein-freiburg.de/" target="_blank">
+            <img src="{{site.baseurl}}/assets/images/börsenverein logo.jpg" width="100%" alt="Börsenverein Freiburg" />
+          </a>
+        </div>
+
+
+        <div class="col-md-9">
+            <h3>Börsenverein Freiburg e.V.</h3>
             <p>
-                Du wirst Dich vier Stunden intensiv mit Deiner Idee beschäftigen und einen ersten Prototype bauen.
-                Dabei geht es darum möglichst viel Output zu erzeugen und die Idee möglichst fassbar zu machen. Am
-                Ende der Veranstaltung solltest Du wissen, ob Du weiter an der Idee arbeiten willst und zweitens
-                einen persönlichen Erfolg für Dich feststellen.
+              Der Börsenverein ist eine Hochschulgruppe mit dem Ziel,
+              die finanzielle Bildung von Studierenden zu fördern.
+              Dazu veranstalten wir Vorträge,  Exkursionen und den jährlichen Börsenführerschein,
+              um einige Grundlagen zum geschehen an der Börse zu vermitteln und das Interesse
+              für eine finanzielle Selbständigkeit zu wecken.
+            </br>
+            <a href="https://boersenverein-freiburg.de/" target="_blank"> Website </a>
             </p>
         </div>
-        <div class="col-md-9">
-            <h3>Wann und wo findet die Veranstaltung statt?</h3>
-            <p>
-                Die Veranstaltung findet am 18.Oktober 2019 von 14:00 Uhr bis 23:00 Uhr statt. Jedoch ist
-                nur eine Bearbeitungszeit von 17:30 bis 21:30 Uhr vorgesehen. Der Veranstaltungsort ist das Masch.Bau, Studierendenhaus der Fakultät für Maschinenbau bei der TU Braunschweig. Die Adresse ist: Langer Kamp 19D, 38106 Braunschweig, Deutschland.
 
+    </div>
+
+
+    <div class="row">
+        <div class="col-md-3">
+          <a href="https://bts-ev.de/freiburg/" target="_blank">
+            <img src="{{site.baseurl}}/assets/images/bts logo.jpg" width="100%" alt="btS Freiburg" />
+          </a>
+        </div>
+
+        <div class="col-md-9">
+            <h3>Biotechnologische Studenteninitiative e.V.</h3>
+            <p>
+              Die btS vereint Studierende und Promovierende aus
+              allen Bereichen der Life Sciences. Wir sind bundesweit
+              vernetzt und wollen schon während unseres Studiums den Blick über
+              den Tellerrand wagen. Als Schnittstelle zwischen Studierenden,
+              Universitäten, Forschungsinstituten und Unternehmen der Industrie
+              ist es unser Ziel, eine stärkere Verknüpfung zwischen diesen
+              Interessengemeinschaften im Bereich der Life Sciences aufzubauen.
+              </br>
+              <a href="https://bts-ev.de/freiburg/" target="_blank"> Website </a>
             </p>
         </div>
     </div>
+
+    <div class="row">
+        <div class="col-md-3">
+          <a href="https://contact-and-connectev.de/" target="_blank">
+            <img src="{{site.baseurl}}/assets/images/contact and connect logo.jpg" width="100%" alt="Contact & Connect" />
+          </a>
+        </div>
+
+        <div class="col-md-9">
+            <h3>Contact & Connect e.V. </h3>
+            <p>
+              Der Contact & Connect e.V. organisiert seit 2018 den
+              Karrieretag in Freiburg. Dieser bietet eine einmalige
+              Netzwerkplattform für Besucher und Aussteller. Hier treffen sich Hochschulabsolventen
+              und Studierenden aller Fakultäten und Fachrichtungen mit zahlreichen Firmen.
+              Durch den Karrieretag bietet der Contact & Connect e.V. den Studierenden und Absolventen die
+              Möglichkeit an, sich über Themen wie Berufseinstieg und Karriere zu informieren.
+              </br>
+              <a href="https://contact-and-connectev.de/" target="_blank"> Website </a>
+            </p>
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="col-md-3">
+          <a href="https://foundersclub-freiburg.de/ " target="_blank">
+            <img src="{{site.baseurl}}/assets/images/foundersclub logo.jpg" width="100%" alt="Foundersclub Freiburg" />
+          </a>
+        </div>
+
+        <div class="col-md-9">
+            <h3>Foundersclub Freiburg e.V.</h3>
+            <p>
+              Der Foundersclub ist die Hochschulgruppe für Entrepreneurship.
+              Unser ultimatives Ziel ist es Studierende zu inspirieren ihr
+              eigenes Startup zu gründen. Dabei wollen wir durch Workshops,
+              Gründungstalks und Startup-Touren das Netzwerk, den Horizont und die
+              Kompetenzen unserer Mitglieder erweitern. Ob KH, EH oder Uni - alle
+              Studierende aus dem Raum Freiburg sind herzlich willkommen.
+              </br>
+              <a href="https://foundersclub-freiburg.de/ " target="_blank"> Website </a>
+            </p>
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="col-md-3">
+          <a href="https://www.facebook.com/pg/icanhochfr/about/" target="_blank">
+            <img src="{{site.baseurl}}/assets/images/ican logo.jpg" width="100%" alt="iCAN" />
+          </a>
+        </div>
+
+        <div class="col-md-9">
+            <h3>ICAN Hochschulgruppe Freiburg</h3>
+            <p>
+              Als Teil von ICAN-Deutschland (ICAN: International
+              Campaign to Abolish Nuclear weapons) setzt sich
+              unsere Hochschulgruppe für die Ächtung von Atomwaffen,
+              für Abrüstung und Frieden ein.
+              Ziel unserer Arbeit in Freiburg ist die Aufklärung über die Gefahren und
+              politischen Nachteile, die von Atomwaffen ausgehen. Für das kommende Semester
+              planen wir eine Filmvorführung, Aktionen in der Stadt und weiteres.
+
+              </br>
+              <a href="https://www.facebook.com/pg/icanhochfr/about/" target="_blank"> Website </a>
+            </p>
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="col-md-3">
+          <a href="https://gbm-online.de/junior-gbm-freiburg-im-breisgau.html " target="_blank">
+            <img src="{{site.baseurl}}/assets/images/igbm logo.jpg" width="100%" alt="jGBM" />
+          </a>
+        </div>
+
+        <div class="col-md-9">
+            <h3>jGBM Freiburg e.V.</h3>
+            <p>
+              Wir sind die lokale Nachwuchsgruppe der GBM e.V. in Freiburg.
+              Unser Ziel ist es Studierende unabhängig von ihrem
+              Studienfortschritt für Wissenschaft  zu begeistern.
+              Wir stellen dabei eine Plattform dar, um über
+              Veranstaltungen, wie Vorträge oder Tagungen, einen
+              Einblick in den Wissenschaftsbetrieb der Biowissenschaften
+              zu bekommen.
+              </br>
+              <a href="https://gbm-online.de/junior-gbm-freiburg-im-breisgau.html " target="_blank"> Website </a>
+            </p>
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="col-md-3">
+          <a href="http://www.sneep.info/lokalgruppen/freiburg/ " target="_blank">
+            <img src="{{site.baseurl}}/assets/images/sneep logo.jpg" width="100%" alt="Sneep Freiburg" />
+          </a>
+        </div>
+
+        <div class="col-md-9">
+            <h3>sneep Freiburg e.V.</h3>
+            <p>
+              sneep (student network for ethics in economics and practice)
+              bildet eine Schnittstelle zwischen Studierenden, jungen Wissenschaftler*innen,
+              Unternehmen und gesellschaftspolitischen Akteuren. Wir fördern und
+              fordern den Diskurs über ethisches und nachhaltiges Wirtschaften und
+              animieren dazu, außerhalb der Grenzen der klassischen Ökonomie zu denken.
+              </br>
+              <a href="http://www.sneep.info/lokalgruppen/freiburg/ " target="_blank"> Website </a>
+            </p>
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="col-md-3">
+          <a href="https://www.studieren-ohne-grenzen.org/lokalgruppen/freiburg/ " target="_blank">
+            <img src="{{site.baseurl}}/assets/images/studieren ohne grenzen logo.jpg" width="100%" alt="Studieren ohne Grenzen" />
+          </a>
+        </div>
+
+        <div class="col-md-9">
+            <h3>Studieren Ohne Grenzen Deutschland e.V.  </h3>
+            <p>
+              Studieren Ohne Grenzen (Études Sans Frontières) engagiert sich für Hochschulbildung
+              in Konfliktgebieten. Wir vergeben Stipendien an bedürftige
+              Studierende, tragen zur Verbesserung der Bildungsinfrastruktur
+              bei und sensibilisieren die deutsche Öffentlichkeit für die Lage
+              in den Zielregionen – derzeit sind das Afghanistan, Burundi,
+              die DR Kongo, Guatemala, Sri Lanka und Tschetschenien.
+              </br>
+              <a href="https://www.studieren-ohne-grenzen.org/lokalgruppen/freiburg/ " target="_blank"> Website </a>
+            </p>
+        </div>
+    </div>
+
 
     <div class="row">
         <div class="col-md-6">
