changed the writing of börsenverein to boersenverein in logo description

--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@ Willst auch du aktiv werden und dich engagieren, aber weißt nicht genau, wo? Da
 
         <div class="col-md-3">
           <a href="https://boersenverein-freiburg.de/" target="_blank">
-            <img src="{{site.baseurl}}/assets/images/börsenverein logo.jpg" width="100%" alt="Börsenverein Freiburg" />
+            <img src="{{site.baseurl}}/assets/images/boersenverein logo.jpg" width="100%" alt="Börsenverein Freiburg" />
           </a>
         </div>
 
